HelloUltraviolet/Fixtures/RejectedSource/SourceText/UnterminatedString/Expected.uv
//! Expected diagnostic metadata for the UnterminatedString rejected-source specimen.

expectedDiagnostic("E-SRC-0301", "Lex-String-Unterminated")
